# university-lab-scheduler

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  GETTING_STARTED.md  LICENSE  README.md  SECURITY.md  WORKFLOW_SETUP_INSTRUCTIONS.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: lint.yml  tests.yml
.streamlit/: config.toml  secrets.toml.example
application/services/: conflict_detector.py  credit_system.py  monitoring_service.py  scheduler_service.py  validation_report.py
application/use_cases/: run_scheduling.py
config/: config.yaml  logging.yaml
deploy/: lab-scheduler.service
domain/: __init__.py  rules.py  value_objects.py
domain/entities/: __init__.py  constraint.py  group.py  professor.py  subject.py
infrastructure/: cache.py  errors.py  health.py  logging_config.py  security.py
infrastructure/config/: config_loader.py
infrastructure/excel/: excel_generator.py  excel_reader.py
infrastructure/solver/: constraint_manager.py  solver_engine.py
presentation/: app.py
presentation/components/: demo_inputs.py  ui_helpers.py
presentation/pages/: config_page.py  health_page.py  monitoring_dashboard.py  preview_sandbox.py  results_page.py
scripts/: deploy.sh  healthcheck.py
tests/: conftest.py  test_assignment_report.py  test_config_loader.py  test_conflict_detector.py  test_credit_system.py  test_excel_reader.py  test_integration_real_file.py  test_solver_engine.py
